# Heypilot

./: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: entities.rs  event.rs  event_handler.rs  image.rs  main.rs  screenshot.rs  selection.rs  system_tray.rs  watcher.rs  window.rs
src/components/: HelloWorld.vue
src/components/common/: Popup.vue
src/components/model/: ModelSelect.vue  ModelSelector.vue
src/components/schema_input/: CommonInput.vue  RadioInput.vue  SchemaInput.vue  SelectInput.vue  SwitchInput.vue  Textarea.vue
src/core/conversation/: conversation.ts  entities.ts  manager.ts  message.ts
src/core/model_runtime/: model_manager.ts
src/core/model_runtime/__base/: common_entities.ts  default.ts  (+5 more)
src/core/scenario/: entities.ts  scenario_manager.ts
src/event/: enum.ts  shortcut.ts
src/router/: index.ts
src/store/: credentials.ts  default.ts  index.ts  scenarios.ts
src/utils/: chat.ts  chat_mode.ts  context.ts  context.vue  conversation.ts  screenshot.ts  selection.ts  store.ts  system_tray.ts  system_tray_manager.ts  tauri_command.ts  types.ts  window.ts
src/views/chat/: Chat.vue  Editor.vue  History.vue  Messages.vue
src/views/message_box/: Snake.vue  snake.ts
src/views/settings/: Settings.vue
src/views/setup_model/: SetupModel.vue  index.ts
src/views/slide/: Slide.vue  auto_sending.ts  conversation.ts  window_events.ts
src/views/submenu/: Submenu.vue
src/views/test/: Test.vue
(+5 files in other folders)
