[package]
name = "hey-copilot"
version = "0.0.0"
description = "A Tauri App"
authors = ["Yeuoly"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = [ "window-hide", "macos-private-api", "global-shortcut-all", "shell-open", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
base64 = "0.22.1"
image = "0.24"
xcap = "0.0.10"
selection = "1.2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
